--------------------------------------------------

****************************************************************************************
* v2.0.6t (Ydalir)                                                                     *
****************************************************************************************

Current working revision.


- v2.0.6t -
-----------

(u) July  21th, 2008.
(t) July  16th, 2008.
(s) July   8th, 2008.
(r) June  23rd, 2008.
(q) June  10th, 2008.
(p) June   9th, 2008.
(o) June   8th, 2008.
(n) June   7th, 2008.
(m) June   6th, 2008.
(l) May   29th, 2008.
(k) May   27th, 2008.
(j) May   23rd, 2008.
(i) May   22nd, 2008.
(h) May   12th, 2008.
(g) May    9th, 2008.
(f) May    7th, 2008.
(e) May    6th, 2008.
(d) May    5th, 2008.
(c) May    2nd, 2008.
(b) May    1st, 2008.
(a) April 30th, 2008.

New Features:
(s) initial commit to add address feature
(p) Added minimal documentation for individual force capping.
(k) blockfile/checkpoint support for exclusions
    thanks to Mehmet Sayar.
(i) added feature LJ_WITH_MOL_CUT
(h) added analyze dipmom_mol
(g) allows writepdb with atom names and length scale
(f) added anaylze dipmon
(e) virtual sites are now possible
(e) allow reaction field with molecular cutoff to avoid dipoles
(d) make temperature of inter_dpd global
(c) ljangle_cap_force implemented for directional LJ.
(a) version 2.0.6

Changes:
(n) get_nonbonded_interaction needs periodical version of
    calc_non_bonded_pair_force_cell
(m) seperate force calc for cfg and cells
(k) molcut is now a normal interaction LJ_WITH_MOL_CUT and RF_WITH_MOL_CUT was
    removed
(k) ghost_flags has now ifdef GHOST_FLAG, virtual sites does not need it
    anymore
(j) more verbose and useful error messages for virtual sites

Bugfixes:
(u) Added a check to angle.h for dot product exceeding 1.0 due to floating
point arithmetic
(t) wrong sign for torgue2
(r) CUTOFF_CHECK was in the wrong place for inter_rf, make a wrapper to use the